# messageEngine

./: .cppcheck-suppress  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SNYK.IO.SECURITY_CHECK.md  TODO_FOR_CLASS_B_CERT.txt  check_requirements.txt
.claude/: CLAUDE.md  VERIFICATION_POLICY.md
.claude/skills/find_missing_use_cases/: SKILL.md
.claude/skills/generate_use_case_list/: SKILL.md
.claude/skills/generate_use_cases/: SKILL.md
.claude/skills/read-standards/: SKILL.md
.claude/skills/validate-safety-doc/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: CI.yml  package.yml  pr-checklist.yml  release.yml  scancode.yml  stress.yml  stress_reconnect.yml  stress_ringbuffer.yml  stress_tcp_fanin.yml
docs/: ARCHITECTURE.md  CAPACITY_REFERENCE.md  CMakeLists.txt  COVERAGE_CEILINGS.md  ClassArchitecture.md  DEFECT_LOG.md  DEMO_WALKTHROUGH.md  DESIGN_PATTERNS.md  DOC_MAINTENANCE.md  Design.md  DirectoryStructure.txt  FILES.txt  HAZARD_ANALYSIS.md  IMPAIRMENT.md  INSPECTION_CHECKLIST.md  INSP_034_PLAN.md  LOGGING.md  MCDC_ANALYSIS.md  POSSIBLE_APPLICATIONS.md  PROTOCOL.md  Requirements.txt  SAFETY_ASSURANCE.md  SECURITY_ASSUMPTIONS.md  STACK_ANALYSIS.md  STANDARDS_AND_CONFLICTS.md  STANDARDS_SOURCES.md  STATE_MACHINES.md  STATIC_ANALYSIS_TOOLCHAIN.md  TESTING_AND_ANALYSIS.md  TRACEABILITY_MATRIX.md  TRANSPORT.md  VERIFICATION_POLICY.md  WCET_ANALYSIS.md  check_traceability.sh  generate_use_cases.txt  pr_audit.sh  user_case_list.txt
docs/use_cases/: HIGH_LEVEL_USE_CASES.md  UC_01_best_effort_send.md  UC_02_reliable_ack_send.md  UC_03_reliable_retry_send.md  UC_04_expired_message_drop.md  UC_05_server_echo_reply.md  UC_06_tcp_inbound_deserialize.md  UC_07_duplicate_message_drop.md  UC_08_ack_resolution.md  UC_09_expired_message_receive_drop.md  UC_10_retry_manager_fires_retry.md  UC_11_ack_tracker_timeout_sweep.md  UC_12_retry_cancelled_on_ack.md  UC_13_impairment_packet_loss.md  UC_14_impairment_duplication.md  UC_15_impairment_fixed_latency.md  UC_16_impairment_jitter.md  UC_17_impairment_reorder.md  UC_18_impairment_partition.md  UC_19_tcp_server_accept.md  UC_20_tcp_send_framed.md  UC_21_tcp_poll_receive.md  UC_22_udp_send_datagram.md  UC_23_udp_receive_datagram.md  UC_24_local_sim_harness_deliver.md  UC_25_serializer_encode.md  UC_26_serializer_decode.md  UC_27_config_defaults_and_overrides.md  UC_28_delivery_engine_init.md  UC_29_prng_deterministic_seed.md  UC_30_local_sim_round_trip.md  UC_31_prng_reproducibility_test.md  UC_32_100pct_loss_test.md  UC_33_dedup_window_eviction_test.md  UC_34_transport_teardown.md  UC_35_tcp_client_connect.md  UC_36_tls_server_handshake.md  UC_37_tls_client_handshake.md  UC_38_dtls_server_handshake.md  UC_39_dtls_client_handshake.md  (+41 more)
github/workflows/: CI.yml
packaging/: messageengine.pc.in
packaging/cmake/: MessageEngineConfig.cmake.in  MessageEngineConfigVersion.cmake.in  MessageEngineTargets.cmake.in
src/: .clang-tidy
src/app/: Client.cpp  DtlsUdpDemo.cpp  NcursesRenderer.cpp  NcursesRenderer.hpp  Server.cpp  StepController.cpp  StepController.hpp  StepDemo.cpp  TlsTcpDemo.cpp
src/core/: AbortResetHandler.hpp  AckTracker.cpp  AckTracker.hpp  Assert.hpp  AssertState.cpp  AssertState.hpp  ChannelConfig.hpp  ConstantTime.hpp  DeliveryEngine.cpp  DeliveryEngine.hpp  DeliveryEvent.hpp  DeliveryEventRing.hpp  DeliveryStats.hpp  DuplicateFilter.cpp  DuplicateFilter.hpp  Fragmentation.cpp  Fragmentation.hpp  ILogClock.hpp  ILogSink.hpp  IResetHandler.hpp  ImpairmentConfig.hpp  Logger.cpp  Logger.hpp  MessageEnvelope.hpp  MessageId.cpp  MessageId.hpp  OrderingBuffer.cpp  OrderingBuffer.hpp  ProtocolVersion.hpp  ReassemblyBuffer.cpp  ReassemblyBuffer.hpp  RequestReplyEngine.cpp  RequestReplyEngine.hpp  RequestReplyHeader.hpp  RetryManager.cpp  RetryManager.hpp  RingBuffer.hpp  Serializer.cpp  Serializer.hpp  Timestamp.cpp  (+6 more)
src/platform/: DtlsUdpBackend.cpp  DtlsUdpBackend.hpp  IMbedtlsOps.hpp  IPosixSyscalls.hpp  ISocketOps.hpp  ImpairmentConfig.hpp  ImpairmentConfigLoader.cpp  ImpairmentConfigLoader.hpp  ImpairmentEngine.cpp  ImpairmentEngine.hpp  LocalSimHarness.cpp  LocalSimHarness.hpp  MbedtlsOpsImpl.cpp  MbedtlsOpsImpl.hpp  PosixLogClock.cpp  PosixLogClock.hpp  PosixLogSink.cpp  PosixLogSink.hpp  PosixSyscallsImpl.cpp  PosixSyscallsImpl.hpp  PrngEngine.cpp  PrngEngine.hpp  SocketOpsImpl.cpp  SocketOpsImpl.hpp  SocketUtils.cpp  SocketUtils.hpp  TcpBackend.cpp  TcpBackend.hpp  TlsSessionStore.cpp  TlsSessionStore.hpp  TlsTcpBackend.cpp  TlsTcpBackend.hpp  UdpBackend.cpp  UdpBackend.hpp
tests/: .clang-tidy  FakeLogClock.hpp  FaultPosixLogClock.hpp  FaultPosixLogSink.hpp  MockSocketOps.hpp  MockTransportInterface.hpp  RingLogSink.hpp  TestPortAllocator.hpp  test_AckTracker.cpp  test_AssertState.cpp  test_DeliveryEngine.cpp  test_DtlsUdpBackend.cpp  test_DuplicateFilter.cpp  test_Fragmentation.cpp  test_ImpairmentConfigLoader.cpp  test_ImpairmentEngine.cpp  test_LocalSim.cpp  test_Logger.cpp  test_MessageEnvelope.cpp  test_MessageId.cpp  test_OrderingBuffer.cpp  test_PrngEngine.cpp  test_ReassemblyBuffer.cpp  test_RequestReplyEngine.cpp  test_RetryManager.cpp  test_RingBuffer.cpp  test_Serializer.cpp  test_SocketUtils.cpp  test_TcpBackend.cpp  test_Timestamp.cpp  test_TlsTcpBackend.cpp  test_UdpBackend.cpp  test_stress_capacity.cpp  test_stress_e2e.cpp  test_stress_ordering.cpp  test_stress_reconnect.cpp  test_stress_ringbuffer.cpp  test_stress_tcp_fanin.cpp
